--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "author": "wang xiantong",
   "dependencies": {
     "body-parser": "^1.15.0",
-    "bootstrap-sass": "^3.3.6",
-    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "jade": "^1.11.0",
     "jquery": "^2.2.1",
     "morgan": "^1.7.0",
-    "serve-favicon": "^2.3.0",
-    "serve-static": "^1.10.2"
+    "serve-favicon": "^2.3.0"
+  },
+  "devDependencies": {
+    "bootstrap-sass": "^3.3.6"
   }
 }
