--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   },
   "author": "wang xiantong",
   "dependencies": {
+    "alt": "^0.18.2",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "jade": "^1.11.0",
     "jquery": "^2.2.1",
     "morgan": "^1.7.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.1",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
