--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "alt": "^0.18.2",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "history": "^2.0.1",
     "jade": "^1.11.0",
     "jquery": "^2.2.1",
     "morgan": "^1.7.0",
@@ -19,6 +20,11 @@
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
-    "bootstrap-sass": "^3.3.6"
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "bootstrap-sass": "^3.3.6",
+    "browserify": "^13.0.0"
   }
 }
