--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
     "babel-core": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
     "bootstrap-sass": "^3.3.6",
-    "browserify": "^13.0.0"
+    "browserify": "^13.0.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
