--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.13.4",
     "jade": "^1.11.0",
     "jquery": "^2.2.1",
+    "mongoose": "^4.4.9",
     "morgan": "^1.7.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
