--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-rename": "^1.2.2",
+    "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "vinyl-source-stream": "^1.1.0"
