--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "wang xiantong",
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "jade": "^1.11.0",
