--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "connect-mongo": "^1.1.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "jade": "^1.11.0",
     "jquery": "^2.2.1",
     "mongoose": "^4.4.9",
     "morgan": "^1.7.0",
+    "pug": "^2.0.0-beta3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
