--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "gulp-concat": "^2.6.0",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.3",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
