--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "my site for university",
   "scripts": {
-    "start": "node dest/app.js",
-    "watch": "nodemon dest/app.js"
+    "start": "node app.js",
+    "watch": "nodemon app.js"
   },
   "author": "wang xiantong",
   "dependencies": {
