--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "jquery": "^2.2.1",
+    "lodash": "^4.13.1",
     "mongoose": "^4.4.9",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta3",
