--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jquery-validation": "^1.15.1",
     "lodash": "^4.13.1",
     "mongoose": "^4.4.9",
+    "mongoose-unique-validator": "^1.0.2",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta3",
     "react": "^0.14.7",
