--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^4.4.9",
     "mongoose-unique-validator": "^1.0.2",
     "morgan": "^1.7.0",
+    "multer": "^1.2.0",
     "pug": "^2.0.0-beta3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
