--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "co": "^4.6.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.1.0",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "jquery": "^2.2.1",
