--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "wang xiantong",
   "dependencies": {
+    "async": "^2.1.1",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
     "cheerio": "^0.20.0",
