--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "glob": "^7.0.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^2.0.13",
     "gulp-concat": "^2.6.0",
     "gulp-rev": "^7.1.2",
     "gulp-sass": "^2.2.0",
