--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.13",
     "gulp-concat": "^2.6.0",
+    "gulp-rename": "^1.2.2",
     "gulp-rev": "^7.1.2",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
