--- a/package.json
+++ b/package.json
@@ -50,6 +50,6 @@
     "normalize.css": "^4.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "webpack": "^1.14.0"
+    "webpack": "^2.2.0-rc.6"
   }
 }
