--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
   },
   "devDependencies": {
     "browserify": "^13.0.0",
+    "css-loader": "^0.26.1",
     "del": "^2.2.2",
     "event-stream": "^3.3.4",
+    "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "glob": "^7.0.5",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -50,6 +52,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "normalize.css": "^4.2.0",
+    "sass-loader": "^4.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^2.2.0",
