--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
+    "vue-loader": "^11.1.0",
+    "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.3.0",
     "webpack-manifest-plugin": "^1.1.0",
