--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "morgan": "^1.7.0",
     "multer": "^1.2.0",
     "mycomps": "0.0.6",
-    "nodemailer": "^2.6.0",
+    "nodemailer": "^4.0.0",
     "normalize.css": "^4.2.0",
     "pinyin": "^2.8.0",
     "pug": "^2.0.0-beta3",
@@ -45,6 +45,7 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "glob": "^7.0.5",
+    "node-sass": "^4.5.3",
     "resolve-url-loader": "^1.6.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
