--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pinyin": "^2.8.0",
     "pug": "^2.0.0-beta3",
     "request": "^2.74.0",
+    "serve-favicon": "^2.4.3",
     "vue": "^2.1.10",
     "vue-auto-validator": "0.0.3",
     "vue-router": "^2.3.1"
