--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "my site for university",
   "scripts": {
-    "devServer": "webpack-dev-server --env=dev",
+    "devServer": "webpack-dev-server --env.dev",
     "watch": "nodemon app.js",
-    "build:dev": "webpack --env=dev --progress --profile --colors --watch",
-    "build:prod": "webpack --env=prod --progress --profile --colors",
-    "stats": "webpack --env prod --profile --json > stats.json"
+    "build:dev": "webpack --env.dev --progress --profile --colors --watch",
+    "build:prod": "webpack --env.prod --progress --profile --colors",
+    "stats": "webpack --env.prod --profile --json > stats.json"
   },
   "author": "wang xiantong",
   "dependencies": {
     "async": "^2.1.1",
-    "bcrypt": "^0.8.5",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.15.0",
     "cheerio": "^0.20.0",
     "co": "^4.6.0",
@@ -23,7 +23,7 @@
     "express-session": "^1.13.0",
     "express-subdomain": "^1.0.5",
     "gm": "^1.23.0",
-    "jquery": "^2.2.1",
+    "jquery": "^3.0.0",
     "js-cookie": "^2.1.3",
     "lodash": "^4.13.1",
     "mongoose": "^4.4.9",
@@ -32,30 +32,30 @@
     "multer": "^1.2.0",
     "mycomps": "0.0.6",
     "nodemailer": "^4.0.0",
-    "normalize.css": "^4.2.0",
+    "normalize.css": "^7.0.0",
     "pinyin": "^2.8.0",
     "pug": "^2.0.0-beta3",
     "request": "^2.74.0",
     "serve-favicon": "^2.4.3",
     "vue": "^2.1.10",
-    "vue-auto-validator": "0.0.3",
+    "vue-auto-validator": ">=0.0.4",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
-    "css-loader": "^0.26.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.5",
-    "file-loader": "^0.9.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "glob": "^7.0.5",
     "node-sass": "^4.5.3",
-    "resolve-url-loader": "^1.6.1",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.7",
-    "vue-loader": "^11.1.0",
+    "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.1.10",
-    "webpack": "^2.2.0",
+    "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.3.0",
-    "webpack-manifest-plugin": "^1.1.0",
-    "webpack-merge": "^2.4.0"
+    "webpack-manifest-plugin": "^1.1.0"
   }
 }
