--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "request-promise": "^4.2.2",
     "serve-favicon": "^2.4.3",
     "vue": "^2.1.10",
-    "vue-auto-validator": ">=0.0.4",
+    "vue-auto-validator": "^0.1.0",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
